<resources>
    <string name="fpt_language_type">CN</string>
    <string name="fpt_account_login">账号密码登录</string>
    <string name="fpt_account_password_login">使用账号密码登录</string>
    <string name="fpt_again_psd">请再次输入密码</string>
    <string name="fpt_agree">同意</string>
    <string name="fpt_app_name">FinClip Browser</string>
    <string name="fpt_app_version">App版本</string>
    <string name="fpt_appid_empty">appId为空</string>
    <string name="fpt_cancel">取消</string>
    <string name="fpt_choose_img_error">选中的图片异常</string>
    <string name="fpt_clause_content">请您务必审慎阅读、充分理解《服务协议》与《隐私政策》各项条款了解详细信息。我们收集的信息将基于合法、正当、必要的原则，仅收集实现产品功能所必要的信息。如你同意，请点击“同意”开始接受我们提供的服务。</string>
    <string name="fpt_config_ser">配置服务器</string>
    <string name="fpt_confirm">确定</string>
    <string name="fpt_confirm_logout">是否确定退出登录？</string>
    <string name="fpt_do_not_use">暂不使用</string>
    <string name="fpt_enter_new_psd">请输入新密码</string>
    <string name="fpt_enter_only_phone_number">请输入手机号</string>
    <string name="fpt_enter_password">请输入密码</string>
    <string name="fpt_enter_phone_number">请输入手机号码或账号</string>
    <string name="fpt_enter_v_code">请输入验证码</string>
    <string name="fpt_enterprise_login">企业端登录</string>
    <string name="fpt_error_url">URL地址有误，请确认后重新输入</string>
    <string name="fpt_example_url">示例：https://example.com</string>
    <string name="fpt_explore_with_mini_program">用小程序探索世界</string>
    <string name="fpt_fetch_config_prompt">初次启动，请访问网页端获取 App 配置信息</string>
    <string name="fpt_fin_clip_environment">FinClip.com 环境体验</string>
    <string name="fpt_fin_service_agreement">FinClip服务协议</string>
    <string name="fpt_forget_password">忘记密码？</string>
    <string name="fpt_get_sms_code">获取验证码</string>
    <string name="fpt_invalid_url">无效的URL地址，请确认后重新输入</string>
    <string name="fpt_login">登录</string>
    <string name="fpt_login_by_other_phone_num">使用其他号码登录</string>
    <string name="fpt_login_err">登录异常</string>
    <string name="fpt_login_info_exp">登录信息过期，请重新登录</string>
    <string name="fpt_logout">退出登录</string>
    <string name="fpt_manual_input">手动输入</string>
    <string name="fpt_new_psd">新密码</string>
    <string name="fpt_no_published_content">当前企业暂无上架内容</string>
    <string name="fpt_onclick_login_err">一键登录异常，建议更换其他登录方式</string>
    <string name="fpt_op_login">运营端登录</string>
    <string name="fpt_open_camera_err">打开相机出错</string>
    <string name="fpt_password">密码</string>
    <string name="fpt_per_albums_denied">读取相册权限被拒绝，无法使用相册功能</string>
    <string name="fpt_per_camera_denied">照相机权限被拒绝，无法使用扫码功能</string>
    <string name="fpt_per_camera_denied_tips">扫码需要用到相机权限，拒绝将无法扫码功能</string>
    <string name="fpt_phone">手机号</string>
    <string name="fpt_phone_login">本机号码一键登录</string>
    <string name="fpt_pic_code">图形码</string>
    <string name="fpt_pic_code_hint">请输入图形码，点击图片刷新</string>
    <string name="fpt_privacy_policy">《隐私政策》</string>
    <string name="fpt_privacy_policy_txt">隐私政策</string>
    <string name="fpt_protocol_txt">服务协议与隐私政策</string>
    <string name="fpt_psd_change_fail">修改密码失败</string>
    <string name="fpt_psd_two_no_same">两次密码不一致</string>
    <string name="fpt_psd_type_err">密码格式不正确</string>
    <string name="fpt_qr_error_url">URL地址有误，请再次扫码~</string>
    <string name="fpt_qr_invalid_url">无效的URL地址，请再次扫码~</string>
    <string name="fpt_qr_validation_failed">二维码地址校验失败，请重试</string>
    <string name="fpt_re_get_v_code">重新获取验证码</string>
    <string name="fpt_reset_psd">重置密码</string>
    <string name="fpt_rule_psd">6-20字符，包含大小写字母、数字和符号</string>
    <string name="fpt_scan_config">扫码配置</string>
    <string name="fpt_scan_mini_program_code">扫描小程序码</string>
    <string name="fpt_scan_qr_code_config_server">扫描二维码配置服务器</string>
    <string name="fpt_sdk_version">SDK版本</string>
    <string name="fpt_server_address_prompt">请配置企业服务器地址</string>
    <string name="fpt_service_agreement">《服务协议》</string>
    <string name="fpt_sms_login">短信验证码登录</string>
    <string name="fpt_sms_login_tips">验证码登录</string>
    <string name="fpt_sms_send_fail">验证码发送失败</string>
    <string name="fpt_sure_psd">确认密码</string>
    <string name="fpt_switch_ee_login">切换企业端登录</string>
    <string name="fpt_switch_op_login">切换运营端登录</string>
    <string name="fpt_test_environment">体验环境</string>
    <string name="fpt_usage_instruction">使用说明</string>
    <string name="fpt_v_code_next">下一步</string>
    <string name="fpt_v_code_send_to">验证码已发送至</string>
    <string name="fpt_verify_phone">请验证您的手机号</string>
</resources>