<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_con_ser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/fpt_config_ser"
        android:textColor="@color/white_9a9ea5"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_use_ps_login"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:src="@drawable/login_logo_full"
        app:layout_constraintStart_toStartOf="@+id/tv_use_ps_login"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_ee_login_tl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/fpt_enterprise_login"
        android:textColor="@color/black_2c3e51"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/tv_use_ps_login"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_switch_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:drawableStart="@drawable/login_switch"
        android:text="@string/fpt_switch_op_login"
        android:textColor="@color/white_9a9ea5"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/tv_use_ps_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_ee_login_tl" />


    <TextView
        android:id="@+id/tv_use_ps_login"
        style="@style/blue_solid_btn"
        android:layout_marginBottom="58dp"
        android:text="@string/fpt_account_password_login"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>