<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:scaleType="center"
        android:src="@drawable/login_nav_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ps_tl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/fpt_account_login"
        android:textColor="@color/black_2c3e51"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/tv_use_ps_login"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />


    <TextView
        android:id="@+id/tv_to_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fpt_sms_login_tips"
        android:textColor="@color/white_9a9ea5"
        android:textSize="13sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/tv_use_ps_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_ps_tl" />


    <TextView
        android:id="@+id/tv_ph_tl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/fpt_phone"
        android:textColor="@color/black_2c3e51"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_use_ps_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_ps_tl" />


    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/fpt_enter_phone_number"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_use_ps_login"
        app:layout_constraintStart_toStartOf="@+id/tv_use_ps_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_ph_tl" />

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/line"
        app:layout_constraintEnd_toEndOf="@+id/et_phone"
        app:layout_constraintStart_toStartOf="@+id/et_phone"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />


    <TextView
        android:id="@+id/tv_psw_tl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fpt_password"
        android:textColor="@color/black_2c3e51"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_use_ps_login"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />


    <EditText
        android:id="@+id/et_psd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/fpt_enter_password"
        android:inputType="textPassword"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_use_ps_login"
        app:layout_constraintStart_toStartOf="@+id/tv_use_ps_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_psw_tl" />

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/line"
        app:layout_constraintEnd_toEndOf="@+id/et_psd"
        app:layout_constraintStart_toStartOf="@+id/et_psd"
        app:layout_constraintTop_toBottomOf="@+id/et_psd" />

    <ImageView
        android:id="@+id/iv_eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eye_psd_selector"
        app:layout_constraintBottom_toBottomOf="@+id/et_psd"
        app:layout_constraintEnd_toEndOf="@+id/et_psd"
        app:layout_constraintTop_toTopOf="@+id/et_psd" />


    <TextView
        android:id="@+id/tv_pic_code_tl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fpt_pic_code"
        android:textColor="@color/black_2c3e51"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_use_ps_login"
        app:layout_constraintTop_toBottomOf="@+id/et_psd" />


    <EditText
        android:id="@+id/et_pic_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/fpt_pic_code_hint"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="15sp"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@+id/iv_code"
        app:layout_constraintStart_toStartOf="@+id/tv_use_ps_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_pic_code_tl" />

    <View
        android:id="@+id/code_line"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/line"
        app:layout_constraintEnd_toEndOf="@+id/et_pic_code"
        app:layout_constraintStart_toStartOf="@+id/et_pic_code"
        app:layout_constraintTop_toBottomOf="@+id/et_pic_code" />

    <ImageView
        android:id="@+id/iv_code"
        android:layout_width="72dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_pic_code"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toEndOf="@+id/et_pic_code"
        app:layout_constraintTop_toTopOf="@+id/et_pic_code" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_code"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="et_pic_code,iv_code,tv_pic_code_tl,code_line" />

    <TextView
        android:id="@+id/tv_use_ps_login"
        style="@style/blue_solid_btn"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="12dp"
        android:enabled="false"
        android:text="@string/fpt_login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pic_code" />

    <TextView
        android:id="@+id/tv_fgt_psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fpt_forget_password"
        android:textColor="@color/blue_4285f4"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_use_ps_login" />


</androidx.constraintlayout.widget.ConstraintLayout>