<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/color_transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="270dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:background="@drawable/white_solid_pop_v2">

        <TextView
            android:id="@+id/tv_logout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/fpt_confirm_logout"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/fpt_cancel"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_ok"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/fpt_confirm"
            android:textColor="@color/blue_007aff"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_cancel" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"
            app:layout_constraintTop_toTopOf="@+id/tv_cancel" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="0dp"
            android:background="@color/line"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cancel"
            app:layout_constraintStart_toEndOf="@+id/tv_cancel"
            app:layout_constraintTop_toTopOf="@+id/tv_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>